Deployment from Frontmatter CMS

--- a/src/components/features.astro
+++ b/src/components/features.astro
@@ -19,7 +19,7 @@ const features = [
     description:
       "Time is of the essence, and we understand that. Our agile development approach ensures that we deliver your projects on time, without compromising on quality.",
     icon: "bx:bxs-fast-forward-circle",
-  }
+  },
 ];
 ---
 
@@ -28,7 +28,9 @@ const features = [
     Let's bring your vision to life
   </h2>
   <p class="text-lg mt-4">
-    Contact us today to explore how we can elevate your digital presence and drive your business forward with innovative solutions that make a difference.
+    Contact us today to explore how we can elevate your digital presence and
+    drive your business forward with innovative solutions that make a
+    difference.
   </p>
 </div>
 
