--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -19,7 +19,8 @@ import { Image } from "astro:assets";
       Crafting Digital Experiences that Inspire
     </h1>
     <p class="text-lg mt-4 max-w-xl">
-      Collaborate with a team that shares your passion for pushing the boundaries of what's possible.
+      Collaborate with a team that shares your passion for pushing the
+      boundaries of what's possible.
     </p>
     <div class="mt-6 flex flex-col sm:flex-row gap-3">
       <a
@@ -28,7 +29,7 @@ import { Image } from "astro:assets";
         class="btn flex gap-1 items-center justify-center"
         rel="noopener">
         <Icon class="w-5 h-5" name="bx:bxs-right-arrow-alt" />
-        Get in Touch
+         Get in Touch
       </a>
       <a
         rel="noopener"
@@ -36,7 +37,7 @@ import { Image } from "astro:assets";
         class="btn btn-outline flex gap-1 items-center justify-center"
         target="_blank">
         <Icon class="w-4 h-4" name="bx:bxl-github" />
-        GitHub Repo
+         GitHub Repo
       </a>
     </div>
   </div>
