--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -13,20 +13,25 @@ import TimeLineElement from "@components/timeline.astro";
 
     <div class="mb-10 text-justify">
       <p>
-        I approach web development with the same commitment and diligence that I've applied in physically demanding roles. 
-        Having worked alongside broadband infrastructure install crews, I understand the importance of precision and teamwork in project execution.
-        My experience installing enourmous 'Windsor' windows and double doors has honed my attention to detail and dedication to delivering crystal-clear results.
+        I approach web development with the same commitment and diligence that
+        I've applied in physically demanding roles. Having worked alongside
+        broadband infrastructure install crews, I understand the importance of
+        precision and teamwork in project execution. My experience installing
+        enourmous 'Windsor' windows and double doors has honed my attention to
+        detail and dedication to delivering crystal-clear results.
       </p>
-      <br>
+      <br />
       <p>
-        My passion for creating responsive and user-friendly websites, combined with a strong work ethic, makes me an eager contributor to projects that push the boundaries of innovation in web/systems development.
+        My passion for creating responsive and user-friendly websites, combined
+        with a strong work ethic, makes me an eager contributor to projects that
+        push the boundaries of innovation in web/systems development.
       </p>
     </div>
-  
+
     <div class="mb-5">
       <div class="text-3xl w-full font-bold">Education</div>
     </div>
-  
+
     <div class="time-line-container grid gap-4 mb-10">
       <TimeLineElement
         title="Enrollment"
@@ -38,39 +43,39 @@ import TimeLineElement from "@components/timeline.astro";
         subtitle2="2022 at UA Little Rock, US"
       />
     </div>
-  
+
     <div class="mb-5">
       <div class="text-3xl w-full font-bold">Experience</div>
     </div>
-  
+
     <div class="time-line-container mb-10">
       <TimeLineElement
         title="Summer Internship"
         subtitle1="2019 at UA Little Rock, US"
-        subtitle2="Web Programming, Game Dev, VR/AR"
-      >
-        Computer Science intern at the Donaghey College of Science, Technology, Engineering, and Mathematics.
+        subtitle2="Web Programming, Game Dev, VR/AR">
+        Computer Science intern at the Donaghey College of Science, Technology,
+        Engineering, and Mathematics.
       </TimeLineElement>
-      <br>
+      <br />
       <TimeLineElement
         title="Infrastructure Install Crew"
-        subtitle1="2020 at Broadband Development Group, LLC"
-      >
-      Worked in the field and in the Little Rock office with engineers across the country installing HyperLeap residential systems
+        subtitle1="2020 at Broadband Development Group, LLC">
+        Worked in the field and in the Little Rock office with engineers across
+        the country installing HyperLeap residential systems
       </TimeLineElement>
-      <br>
+      <br />
       <TimeLineElement
         title="Handyman/Carpentry Work"
-        subtitle1="2022 at Butler Window & Door"
-      >
-      Worked in the shop and at construction sites installing custom Windsor windows and doors
+        subtitle1="2022 at Butler Window & Door">
+        Worked in the shop and at construction sites installing custom Windsor
+        windows and doors
       </TimeLineElement>
     </div>
-  
+
     <div class="mb-5">
       <div class="text-3xl w-full font-bold">Skills</div>
     </div>
-  
+
     <ul class="list-disc md:columns-5 columns-2 mx-6">
       <li>Desktop/Web App Development</li>
       <li>Automation</li>
