--- a/src/components/navbar.astro
+++ b/src/components/navbar.astro
@@ -19,16 +19,17 @@ const menuitems = [
   {
     title: "Feed",
     path: "/rss.xml",
-  }
+  },
 ];
 ---
+
 <div class="antialiased">
   <header class="lg:px-16 px-8 flex flex-wrap items-center py-4 shadow-md">
     <div class="flex-1 flex justify-between items-center">
       <a href="/" class="text-lg"
-          ><span class="font-bold">Oceanus</span><span
-            class="text-slate-300">Group</span
-          >
+        ><span class="font-bold">Oceanus</span><span class="text-slate-300"
+          >Group</span
+        >
       </a>
     </div>
 
@@ -39,8 +40,12 @@ const menuitems = [
     </label> -->
 
     <label for="menu-toggle" class="pointer-cursor lg:hidden block">
-      <svg class="fill-current"
-        xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20">
+      <svg
+        class="fill-current"
+        xmlns="http://www.w3.org/2000/svg"
+        width="20"
+        height="20"
+        viewBox="0 0 20 20">
         <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"></path>
       </svg>
     </label>
@@ -51,13 +56,11 @@ const menuitems = [
         <ul class="lg:flex items-center justify-between text-base pt-4 lg:pt-0">
           {
             menuitems.map((item) => (
-            <li>
-              <a
-                href={item.path}
-                class="flex lg:px-3 py-2">
-                {item.title}
-              </a>
-            </li>
+              <li>
+                <a href={item.path} class="flex lg:px-3 py-2">
+                  {item.title}
+                </a>
+              </li>
             ))
           }
         </ul>
