--- a/src/components/sectionhead.astro
+++ b/src/components/sectionhead.astro
@@ -4,9 +4,9 @@ const { align = "center" } = Astro.props;
 
 <div class:list={["mt-16", align === "center" && "text-center"]}>
   <h1 class="text-4xl lg:text-5xl font-bold lg:tracking-tight">
-    <slot name="title"></slot>
+    <slot name="title" />
   </h1>
   <p class="text-lg mt-4">
-    <slot name="desc"></slot>
+    <slot name="desc" />
   </p>
 </div>
