--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,8 +3,8 @@ import { SEO } from "astro-seo";
 import Footer from "@components/footer.astro";
 import Navbar from "@components/navbar.astro";
 import "@fontsource-variable/inter/index.css";
-import { ViewTransitions } from 'astro:transitions';
-import '../styles/global.css';
+import { ViewTransitions } from "astro:transitions";
+import "../styles/global.css";
 
 export interface Props {
   title: string;
@@ -12,26 +12,21 @@ export interface Props {
 
 const canonicalURL = new URL(Astro.url.pathname, Astro.site).toString();
 
-const resolvedImageWithDomain = new URL(
-  "/odc2.png",
-  Astro.site
-).toString();
+const resolvedImageWithDomain = new URL("/odc2.png", Astro.site).toString();
 
 const { title } = Astro.props;
 
-const makeTitle = title
-  ? title + " | " + "Oceanus Group"
-  : "Oceanus Group";
+const makeTitle = title ? title + " | " + "Oceanus Group" : "Oceanus Group";
 ---
 
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en" data-theme="business">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type='image/x-icon' href="/favicon.ico">
-    <link rel="manifest" href="/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="manifest" href="/site.webmanifest" />
     <meta name="generator" content={Astro.generator} />
     <SEO
       title={makeTitle}
@@ -53,8 +48,8 @@ const makeTitle = title
   </head>
   <body>
     <Navbar />
-      <slot/>
-    <br/>
+    <slot />
+    <br />
     <Footer />
     <style is:global>
       /* Improve Page speed */
