--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -22,7 +22,9 @@ const { Content } = await entry.render();
 <Layout title={entry.data.title}>
   <Container>
     <div class="mx-auto max-w-3xl mt-14">
-      <span transition:animate="slide" class="text-blue-400 uppercase tracking-wider text-sm font-medium">
+      <span
+        transition:animate="slide"
+        class="text-blue-400 uppercase tracking-wider text-sm font-medium">
         {entry.data.category}
       </span>
       <h1
@@ -43,11 +45,7 @@ const { Content } = await entry.render();
         </time>
         <span class="text-gray-400 hidden md:block">•</span>
         <div class="w-full md:w-auto flex flex-wrap gap-3">
-          {
-            entry.data.tags.map((tag) => (
-              <span class="text-sm">#{tag}</span>
-            ))
-          }
+          {entry.data.tags.map((tag) => <span class="text-sm">#{tag}</span>)}
         </div>
       </div>
     </div>
@@ -56,11 +54,7 @@ const { Content } = await entry.render();
       <Content />
     </div>
     <div class="text-center mt-8">
-      <a
-        href="/blog"
-        class="btn btn-active"
-        >← Back to Blog</a
-      >
+      <a href="/blog" class="btn btn-active">← Back to Blog</a>
     </div>
   </Container>
 </Layout>
