--- a/src/pages/blog/[...page].astro
+++ b/src/pages/blog/[...page].astro
@@ -5,8 +5,9 @@ import Container from "@components/container.astro";
 import Sectionhead from "@components/sectionhead.astro";
 import Paginator from "@components/paginator.astro";
 import { Image } from "astro:assets";
+import type { InferGetStaticPropsType, GetStaticPaths } from 'astro';
 
-export async function getStaticPaths({ paginate }: any) {
+export const getStaticPaths = (async ({ paginate }) => {
   // Filter blog entries with 'draft: false' & date before current date
   const publishedBlogEntries = await getCollection("blog", ({ data }) => {
     return !data.draft && data.publishDate < new Date();
@@ -18,7 +19,9 @@ export async function getStaticPaths({ paginate }: any) {
   });
 
   return paginate(publishedBlogEntries, { pageSize: 5 });
-}
+}) satisfies GetStaticPaths
+
+type Props = InferGetStaticPropsType<typeof getStaticPaths>
 
 const { page } = Astro.props;
 ---
