Fix hero image alt

--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -8,7 +8,7 @@ import { Image } from "astro:assets";
   <div class="py-6 md:order-1 hidden md:block">
     <Image
       src="https://ik.imagekit.io/xbkhabiqcy9/img/oskar-yildiz-cOkpTiJMGzA-unsplash_iNLe4XuI4.jpg?updatedAt=1669480510560"
-      alt="hero image"
+      alt="hero laptop with code"
       width={600}
       height={400}
     />
