--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -1,5 +1,4 @@
 ---
-import { Icon } from "astro-icon";
 import { Image } from "astro:assets";
 ---
 
@@ -28,16 +27,16 @@ import { Image } from "astro:assets";
         target="_blank"
         class="btn flex gap-1 items-center justify-center"
         rel="noopener">
-        <Icon class="w-5 h-5" name="bx:bxs-right-arrow-alt" />
-         Get in Touch
+        <!-- <Icon class="w-5 h-5" name="bx:bxs-right-arrow-alt" /> -->
+        Get in Touch
       </a>
       <a
         rel="noopener"
         href="https://github.com/CM-IV/main-astro-site"
         class="btn btn-outline flex gap-1 items-center justify-center"
         target="_blank">
-        <Icon class="w-4 h-4" name="bx:bxl-github" />
-         GitHub Repo
+        <!-- <Icon class="w-4 h-4" name="bx:bxl-github" /> -->
+        GitHub Repo
       </a>
     </div>
   </div>
