--- a/src/components/logos.astro
+++ b/src/components/logos.astro
@@ -1,14 +1,16 @@
 ---
-import { Icon } from "astro-icon";
 import { Vite } from "./ui/icons";
+import { React } from "./ui/icons";
+import { Rust } from "./ui/icons";
+import { Node } from "./ui/icons";
 ---
 
 <div class="mt-24">
   <h2 class="text-center">Trusted Technology Experience</h2>
   <div class="flex gap-8 md:gap-20 items-center justify-center mt-10 flex-wrap">
-    <Icon class="h-8 md:h-12" name="simple-icons:react" />
+    <React class="h-8 md:h-12 fill-current" />
     <Vite class="h-8 md:h-12 fill-current" />
-    <Icon class="h-8 md:h-12" name="simple-icons:rust" />
-    <Icon class="h-8 md:h-12" name="simple-icons:nodejs" />
+    <Rust class="h-8 md:h-12 fill-current" />
+    <Node class="h-8 md:h-12 fill-current" />
   </div>
 </div>
