--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -14,8 +14,7 @@ const site = Astro.site?.href as string;
     </p>
     <a href={`${site}privacy`} target="_blank">Privacy Policy</a>
     <p>
-      Copyright © {new Date().getFullYear()} Oceanus Digital. All rights
-      reserved.
+      Copyright © {new Date().getFullYear()} Oceanus Digital. All rights reserved.
     </p>
   </div>
   <!-- <div>
